fix widget size when closed on mobile

--- a/src/components/Widget/style.scss
+++ b/src/components/Widget/style.scss
@@ -32,7 +32,7 @@
 }
 
 @media screen and (max-width: 800px) {
-  .widget-container {
+  .widget-container.chat-open {
     @include widget-container-fs;
   }
 }
